changed header and footer bgs to uio-black, not completely black

--- a/style/uio-app-footer.css
+++ b/style/uio-app-footer.css
@@ -4,7 +4,7 @@ Footer styles
 *******************************************************************************/
 
 #app-footer {
-  background-color: #000;
+  background-color: #18191c;
   padding-top: 50px;
   padding-bottom: 25px;
   font-size: 1.6rem;
