--- a/style/uio-app-header.css
+++ b/style/uio-app-header.css
@@ -9,7 +9,7 @@ header-uio-identity with logo
 *******************************************************************************/
 
 #header-uio-identity {
-  background: #000;
+  background: #18191c;
   padding: 20px 0;
 }
 
